# azVoiceAssit

./: .gitignore  README.md  assistant.py  conftest.py  requirements.txt  ui_server.py
capabilities/: default.json
docs/: SETUP.md
docs/archi/: 01-current-python-browser.md  02-shipped-rust-desktop.md  02-target-rust-desktop.md  03-tauri-gui-target.md
docs/bugfix/: 2026-05-31-rust-vad-audio-pipeline.md  2026-06-01-aec-phase1-results.md  2026-06-02-aec-phase2-results.md  2026-06-02-tauri-gui-frontend-debugging.md
docs/proposal/: 2026-06-01-acoustic-echo-cancellation.md
docs/superpowers/plans/: 2026-05-29-voice-assistant-frontend.md  2026-05-29-voice-assistant-p0.md  2026-05-30-rust-desktop-p0.md  2026-05-31-rust-ui-polish-settings.md  2026-06-01-aec-phase2-barge-in.md  2026-06-01-aec-shadow-mode.md  (+1 more)
docs/thirdpartyreview/: 2026-05-29-voice-assistant-frontend-design-review.md  2026-05-31-rust-ui-polish-settings-review.md  2026-06-01-acoustic-echo-cancellation-review.md  2026-06-01-aec-phase2-barge-in-design-review.md  2026-06-02-tauri-gui-design-review.md  2026-06-02-tauri-gui-plan-review.md  2026-06-02-tauri-gui-plan-review_v2.md
plan/: plan.md
rust/: Cargo.toml  tauri.conf.json
rust/examples/: list_devices.rs  mic_test.rs  probe_audio.rs  refine_smoke.rs  vad_diag.rs
rust/src/: audio.rs  config.rs  echo.rs  events.rs  history.rs  lib.rs  main.rs  refine.rs  segmenter.rs  settings.rs  state.rs  stt.rs  timing.rs  tts.rs  ui.rs  vad.rs  worker.rs
static/: app.js  index.html  style.css
tests/: test_assistant.py
tts_service/: requirements.txt  server.py
(+7 files in other folders)
