[package]
name = "azva"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.34"
egui = "0.34"
cpal = "0.17"
rodio = "0.22"
ort = "2.0.0-rc.12"
ndarray = "0.17"
whisper-rs = "0.16"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
